@@ -35,6 +35,7 @@ bugfix:
 - fix memory issue if own addressgroup/servicegroup is added as a subgroup in an offline configuration file (move from error to warning)
 - fix problems with mergen of branches
 - fix address-edit filter=(object overrides.upper.level)
+- fix service-merger replace value() with getDestPort()
 
 
 
